<resources>
    <string name="app_name">Store Controller System</string>
    <string name="user_name">这里输入用户名</string>
    <string name="password">这里输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="partner_name">伙伴姓名:</string>
    <string name="partner_phone">手机号码:</string>
    <string name="partner_age">伙伴年龄</string>
    <string name="goods_name">商品名称</string>
    <string name="goods_price">合计价格</string>
    <string name="goods_number">商品数量</string>
    <string name="done">确认</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="sch_btn">查询</string>
    <string name="balance">日结</string>
    <string name="shop_tip">这里输入需要查询的店铺号码</string>
    <string name="vip_num">会员卡号</string>
    <string name="no_data_tip">现在还没有添加数据</string>
    <string name="commit">提交</string>
    <string name="customer_name">这里输入顾客姓名</string>
    <string name="customer_age">这里输入顾客年龄</string>
    <string name="customer_phone">这里输入顾客手机号码</string>

</resources>
