<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <EditText
            android:id="@+id/item_for_general_rcv_do_sales_goods"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/goods_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/item_for_general_rcv_do_sales_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/goods_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/item_for_general_rcv_do_sales_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/goods_price"
            android:inputType="number" />


    </LinearLayout>


</LinearLayout>