<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/partner_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/item_for_dialog_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/partner_age">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/item_for_dialog_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/partner_phone">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/item_for_dialog_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>