<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/customer_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/customer_add_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/customer_age">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/customer_add_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/customer_phone">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/customer_add_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <TextView
            android:id="@+id/customer_add_commit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/commit"
            android:textSize="19sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>


</LinearLayout>