<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="data.json"
        app:lottie_imageAssetsFolder="images"
        app:lottie_loop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@color/bg_color_blue"
        android:padding="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:lottie_autoPlay="true"
            app:lottie_fileName="outline_user.json"
            app:lottie_loop="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/user_name">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/bg_color_blue"
        android:padding="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:lottie_autoPlay="true"
            app:lottie_fileName="simple_outline_lock_.json"
            app:lottie_loop="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/password">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@color/bg_color_blue">

        <TextView
            android:id="@+id/login_register_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_login_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="19sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>