<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_light">

    <TextView
        android:id="@+id/shop_fragment_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="19sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/shop_fragment_info"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_light" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/line"
        android:hint="@string/shop_tip"
        android:padding="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/shop_fragment_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/shop_fragment_sch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_green_light"
                android:gravity="center"
                android:text="@string/sch_btn"
                android:textSize="19sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/shop_fragment_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_green_light"
                android:gravity="center"
                android:text="@string/balance"
                android:textSize="19sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>