<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/do_sales_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color_blue"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/do_sales_ctl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@android:color/holo_green_dark"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <LinearLayout
                android:id="@+id/do_sales_title_rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/do_sales_goods_name_hint"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/goods_name">

                    <AutoCompleteTextView
                        android:completionThreshold="2"
                        android:id="@+id/do_sales_goods_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:hint="@string/goods_number">

                        <android.support.design.widget.TextInputEditText
                            android:inputType="number"
                            android:id="@+id/do_sales_goods_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:hint="@string/vip_num">

                        <android.support.design.widget.TextInputEditText
                            android:inputType="number"
                            android:id="@+id/do_sales_vip_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="10dp">

                        <TextView
                            android:id="@+id/do_sales_title_cancel"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/holo_green_light"
                            android:gravity="center"
                            android:text="@string/cancel"
                            android:textSize="19sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="10dp">

                        <TextView
                            android:id="@+id/do_sales_title_done"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/holo_green_light"
                            android:gravity="center"
                            android:text="@string/add"
                            android:textSize="19sp"
                            android:textStyle="bold" />
                    </android.support.v7.widget.CardView>
                </LinearLayout>


            </LinearLayout>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/do_sales_main_rcv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color_light"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v7.widget.RecyclerView>
</android.support.design.widget.CoordinatorLayout>